force-app/main/default/objects/MovieGenre__c/MovieGenre__c.object-meta.xml
<CustomObject>
    <label>Movie Genre</label>
    <pluralLabel>Movie Genres</pluralLabel>
    <nameField>
        <label>Movie Genre Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>