force-app/main/default/objects/MovieGenre__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <type>MasterDetail</type>
    <referenceTo>Genre__c</referenceTo>
    <relationshipLabel>Movie Genres</relationshipLabel>
    <relationshipName>MovieGenres</relationshipName>
</CustomField>