force-app/main/default/objects/MovieGenre__c/fields/Movie__c.field-meta.xml
<CustomField>
    <fullName>Movie__c</fullName>
    <label>Movie</label>
    <type>MasterDetail</type>
    <referenceTo>Movie__c</referenceTo>
    <relationshipLabel>Movie Genres</relationshipLabel>
    <relationshipName>MovieGenres</relationshipName>
</CustomField>