force-app/main/default/objects/MovieGenre__c/fields/MovieGenreKey__c.field-meta.xml
<CustomField>
    <fullName>MovieGenreKey__c</fullName>
    <label>Movie Genre Key</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>