force-app/main/default/objects/MovieGenre__c/validationRules/MovieGenreKeyMismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>MovieGenreKeyMismatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Movie__c)), NOT(ISBLANK(Genre__c)), MovieGenreKey__c &lt;&gt; (CASESAFEID(Movie__c) &amp; '-' &amp; CASESAFEID(Genre__c)))</errorConditionFormula>
    <errorMessage>MovieGenreKey__c must match Movie__c-Genre__c.</errorMessage>
    <errorDisplayField>MovieGenreKey__c</errorDisplayField>
</ValidationRule>